--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+/* header {
+    transform: translate(-50%, -50%)
+} */
+
 h1 {
     text-align: center;
 }
@@ -6,10 +10,31 @@ h2 {
     text-align: center;
 }
 
+.nav {
+    text-align: center;
+    /* padding: 0 50px 0 50px;
+    margin: auto; */
+}
+
+ul {
+    list-style-type: none;
+}
+
+.nav li {
+    display: inline-block;
+    padding: 0 50px 0 50px;
+    margin: auto;
+}
+
+li {
+    display: inline-block;
+}
+
 .half-width {
     width: 50%;
 }
 
-nav {
+
+/* nav {
     display: inline;
-}
+} */
