--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-/* header {
-    transform: translate(-50%, -50%)
-} */
-
 h1 {
     text-align: center;
 }
@@ -12,8 +8,6 @@ h2 {
 
 .nav {
     text-align: center;
-    /* padding: 0 50px 0 50px;
-    margin: auto; */
 }
 
 ul {
@@ -30,11 +24,20 @@ li {
     display: inline-block;
 }
 
-.half-width {
-    width: 50%;
+#basic {
+    text-align: center;
 }
 
+#logo {
+    margin: auto;
+    display: block;
+}
 
-/* nav {
-    display: inline;
-} */
+.rightside {
+    margin: auto;
+    display: block;
+}
+
+p {
+    font-size: 22px;
+}
