--- a/main.css
+++ b/main.css
@@ -39,6 +39,8 @@ h4 {
 #logo {
     margin: auto;
     display: block;
+    padding: 1px;
+    border: solid black 1px;
     width: 200px;
     height: auto;
 }
