--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ h1 {
 
 h2 {
     text-align: center;
+    color: #3B5672;
 }
 
 .nav {
@@ -54,4 +55,12 @@ p {
     font-size: 22px;
     width: 80%;
     margin: 0 10% 0 10%;
+}
+
+a:visited {
+    color: black;
+}
+
+a:link {
+    color: black;
 }
