--- a/main.css
+++ b/main.css
@@ -29,6 +29,15 @@ ul {
     display: inline-block;
 }
 
+#donors p {
+    text-align: center;
+    margin-bottom: .5em;
+}
+
+#donorlist li {
+    text-align: center;
+}
+
 h4 {
     text-align: center;
 }
